[package]
name = "joueur"
version = "0.1.1"
description = "A beautiful music player you've always wanted"
authors = ["Dongsheng Zhao"]
license = "MIT"
repository = "https://github.com/Blackman99/joueur"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-all", "fs-all", "notification-all", "path-all", "protocol-asset", "shell-open", "window-all"] }
id3 = "1.6.0"
base64 = "0.21.0"
mp3-duration = "0.1.10"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
